--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
 drf_base64==2.0
+gunicorn==20.1.0
 idna==3.10
 itypes==1.2.0
 Jinja2==3.1.6
@@ -32,5 +33,6 @@ six==1.17.0
 social-auth-app-django==4.0.0
 social-auth-core==4.5.6
 sqlparse==0.5.3
+typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
