--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -6,7 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==44.0.2
 defusedxml==0.7.1
-Django==5.1.7
+Django
 django-filter==25.1
 django-templated-mail==1.1.1
 djangorestframework==3.15.2
@@ -20,7 +20,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 oauthlib==3.2.2
 pillow==11.1.0
-psycopg2-binary==2.9.10
+psycopg2-binary==2.9.3
 pycparser==2.22
 PyJWT==2.10.1
 python-dotenv==1.0.1
