--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     client_max_body_size 10M;
+    server_tokens off;
 
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -9,8 +10,16 @@ server {
     
     location / {
         root /usr/share/nginx/html;
+        alias /staticfiles/;
         index  index.html index.htm;
         try_files $uri /index.html;
-      }
+    }
 
+    location /api/ {
+        proxy_pass http://backend:8000/api/;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
 }
