--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,27 +1,34 @@
 server {
     listen 80;
+    server_name backend;
     client_max_body_size 10M;
-    server_tokens off;
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
-    }
-    
-    location / {
-        root /usr/share/nginx/html;
-        alias /staticfiles/;
-        index  index.html index.htm;
-        try_files $uri /index.html;
+    location /static/admin/ {
+        root /var/html/;
     }
 
-    location /api/ {
-        proxy_set_header Host $http_host;
-        proxy_pass http://backend:8000/api/;
+    location /media/ {
+        root /var/html/;
+        try_files $uri $uri/ =404;
+    }
+
+    location /static/rest_framework/ {
+        root /var/html/;
     }
 
     location /admin/ {
-        proxy_set_header Host $http_host;
         proxy_pass http://backend:8000/admin/;
+        proxy_set_header        Host $host;
+    }
+
+    location /api/ {
+        proxy_pass http://backend:8000/api/;
+        proxy_set_header        Host $host;
+    }
+
+    location / {
+        root /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri /index.html;
     }
 }
