--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -28,9 +28,12 @@ services:
     image: maximsupreme/foodgram_gateway
     env_file: .env
     ports:
-      - "80:80"
+      - 9090:80
     volumes:
       - static:/staticfiles/
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
     depends_on:
       - backend
       - frontend
