--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - foodgram_data:/var/lib/postgresql/data
   backend:
-    build: ./backend/foodgram/
+    image: maximsupreme/foodgram_backend
     env_file: .env
     volumes:
       - static:/backend_static
@@ -21,7 +21,7 @@ services:
       - db
   frontend:
     container_name: foodgram-front
-    build: ../frontend
+    build: maximsupreme/foodgram_frontend
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - ../frontend/:/app/result_build/
@@ -29,7 +29,7 @@ services:
     container_name: foodgram-proxy
     image: nginx:1.25.4-alpine
     ports:
-      - "80:80"
+      - 9090:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
@@ -37,4 +37,3 @@ services:
     depends_on:
       - backend
       - frontend
-
