--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 volumes:
-  foodgram_data_production:
+  db_data:
   static:
   media:
 
@@ -10,8 +10,9 @@ services:
     image: postgres:13.10
     env_file: .env
     volumes:
-      - foodgram_data_production:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
   backend:
+    container_name: backend
     image: maximsupreme/foodgram_backend
     env_file: .env
     volumes:
@@ -20,17 +21,17 @@ services:
     depends_on:
       - db
   frontend:
-    image: maximsupreme/foodgram_frontend
+    container_name: foodgram-front
+    build: maximsupreme/foodgram_frontend
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - ../frontend/:/app/result_build/
   gateway:
-    image: maximsupreme/foodgram_gateway
-    env_file: .env
+    container_name: foodgram-proxy
+    image: nginx:1.25.4-alpine
     ports:
       - 9090:80
     volumes:
-      - static:/staticfiles/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
