--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     server_name backend;
     client_max_body_size 10M;
+    root /usr/share/nginx/html;
+    index index.html index.html;
 
     location /static/admin/ {
         root /var/html/;
