--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -11,6 +11,7 @@ django-filter==25.1
 django-templated-mail==1.1.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==4.7.2
+django-cors-headers==3.13.0
 djoser==2.1.0
 drf_base64==2.0
 gunicorn==20.1.0
